--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -8,15 +8,14 @@
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="30dp"
         android:layout_marginTop="8dp"
-        android:layout_weight="1"
-        app:srcCompat="@drawable/title" />
+        android:src="@drawable/title" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/main_pager"
         android:layout_width="match_parent"
-        android:layout_height="389dp"
+        android:layout_height="match_parent"
         android:layout_marginTop="8dp"
         android:layout_weight="1">
 
