--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_width="220dp"
         android:layout_height="220dp"
         android:layout_gravity="center"
-        app:srcCompat="@drawable/logo" />
+        android:src="@drawable/logo" />
 
     <LinearLayout
         android:layout_width="match_parent"
