--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -72,6 +72,7 @@
             android:textColorLink="@android:color/darker_gray" />
 
         <Button
+            android:id="@+id/nickname_btn"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_margin="10dp"
