--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -4,22 +4,77 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginTop="8dp"
-        android:src="@drawable/title" />
+
+        <ImageButton
+            android:id="@+id/imgbtn_user"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="8dp"
+            android:onClick="onClick"
+            android:padding="0dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/user" />
+
+        <ImageView
+            android:id="@+id/image_logo"
+            android:layout_width="269dp"
+            android:layout_height="30dp"
+            android:src="@drawable/title" />
+
+        <ImageButton
+            android:id="@+id/imgbtn_settings"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="8dp"
+            android:onClick="onClick"
+            android:padding="0dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/settings" />
+
+
+
+    </LinearLayout>
+
 
     <android.support.v4.view.ViewPager
         android:id="@+id/main_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_weight="1">
-
     </android.support.v4.view.ViewPager>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+
+        <Button
+            android:id="@+id/btn_fail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:onClick="onClick"
+            android:text="넘기기" />
+
+        <Button
+            android:id="@+id/btn_pass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="좋아요" />
+
+    </LinearLayout>
+
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -28,14 +83,6 @@
         android:layout_gravity="bottom|end"
         android:layout_marginRight="20dp"
         android:src="@android:drawable/ic_dialog_email" />
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/main_tab"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="#99993366">
-
-    </android.support.design.widget.TabLayout>
 
 
 </LinearLayout>
