--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -15,30 +15,20 @@
         app:srcCompat="@drawable/picture" />
 
     <TextView
+        android:id="@+id/infoName"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="강호동"
+        android:textSize="20dp"
+        android:gravity="center"
+        android:layout_margin="10dp"
+        android:textColor="@android:color/black"/>
+
+    <TextView
         android:id="@+id/infoText"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="안녕하세요. 윙크남 강호동입니다. 많은 좋아요 부탁드립니다!" />
-
-    <LinearLayout
-        android:layout_margin="20dp"
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
-
-        <Button
-            android:layout_marginRight="10dp"
-            android:id="@+id/failBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="넘기기" />
-        <Button
-            android:id="@+id/passBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="좋아요" />
-
-    </LinearLayout>
 </LinearLayout>
