--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -51,6 +51,16 @@
         android:layout_weight="1">
     </android.support.v4.view.ViewPager>
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:visibility="gone"
+        android:gravity="center"
+        android:text="오늘 소개 끝!"
+        android:textSize="50sp"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -58,7 +68,7 @@
         android:layout_gravity="center">
 
         <Button
-            android:id="@+id/btn_fail"
+            android:id="@+id/btn_dislike"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
@@ -66,7 +76,7 @@
             android:text="넘기기" />
 
         <Button
-            android:id="@+id/btn_pass"
+            android:id="@+id/btn_like"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onClick"
