--- a/app/src/main/res/layout/recyclerviewholder_chat.xml
+++ b/app/src/main/res/layout/recyclerviewholder_chat.xml
@@ -13,15 +13,29 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@mipmap/ic_launcher"/>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="8dp">
         <TextView
             android:id="@+id/viewholder_text"
-            android:text="textView"
-            android:layout_marginLeft="20dp"
-            android:textSize="15sp"
-            android:layout_gravity="center"
+            android:text="이름"
+            android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+        <TextView
+            android:text="대화내용"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="2dp"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:textSize="15sp"/>
+
+    </LinearLayout>
+
 
     </LinearLayout>
 
