--- a/app/src/main/res/layout/activity_set.xml
+++ b/app/src/main/res/layout/activity_set.xml
@@ -6,39 +6,13 @@
     android:orientation="vertical"
     >
 
-    <Button
-        android:id="@+id/btn1"
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="@android:color/white"
-        android:text="마이페이지" />
+        android:layout_alignParentTop="true" />
 
-    <Button
-        android:id="@+id/btn2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btn1"
-        android:background="@android:color/white"
-        android:text="환경설정" />
-
-    <Button
-        android:id="@+id/btn3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btn2"
-        android:background="@android:color/white"
-        android:text="Q / A" />
-
-    <Button
-        android:id="@+id/btn4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btn3"
-        android:background="@android:color/white"
-        android:text="이용약관" />
 
 
 </RelativeLayout>
