--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -11,15 +11,13 @@
         android:layout_marginTop="15dp"
         android:orientation="horizontal">
 
-
-        <ImageButton
+        <ImageView
             android:id="@+id/imgbtn_user"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginLeft="8dp"
             android:onClick="onClick"
-            android:padding="0dp"
-            android:scaleType="centerCrop"
+            android:layout_weight="1"
             android:src="@drawable/user" />
 
         <ImageView
@@ -28,17 +26,16 @@
             android:layout_height="30dp"
             android:src="@drawable/title" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/imgbtn_settings"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_weight="1"
             android:layout_marginRight="8dp"
             android:onClick="onClick"
             android:padding="0dp"
             android:scaleType="centerCrop"
             android:src="@drawable/settings" />
-
-
 
     </LinearLayout>
 
