--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -16,8 +16,8 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginLeft="8dp"
-            android:onClick="onClick"
             android:layout_weight="1"
+            android:onClick="onClick"
             android:src="@drawable/user" />
 
         <ImageView
@@ -81,15 +81,39 @@
 
     </LinearLayout>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="30dp"
+        android:visibility="invisible"
+        android:src="@android:drawable/ic_dialog_email" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="30dp"
+        android:visibility="invisible"
+        android:src="@android:drawable/ic_dialog_email" />
 
+        android:src="@android:drawable/ic_dialog_email" />
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginRight="20dp"
+        android:layout_marginBottom="30dp"
         android:src="@android:drawable/ic_dialog_email" />
+
+
+
+
 
 
 </LinearLayout>
