--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -40,13 +40,13 @@
     </LinearLayout>
 
 
-    <android.support.v4.view.ViewPager
+    <com.prograpy.app2.appdev2.main.MainCustomViewPager
         android:id="@+id/main_pager"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_weight="1">
-    </android.support.v4.view.ViewPager>
+    </com.prograpy.app2.appdev2.main.MainCustomViewPager>
 
     <TextView
         android:id="@+id/textView"
