--- a/app/src/main/res/layout/activity_set.xml
+++ b/app/src/main/res/layout/activity_set.xml
@@ -6,12 +6,58 @@
     android:orientation="vertical"
     >
 
-    <ListView
-        android:id="@+id/listView"
+    <TextView
+        android:id="@+id/first"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:layout_height="wrap_content"
+        android:text="버전정보"
+        android:textSize="20sp"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        />
+    <TextView
+        android:id="@+id/second"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:text="이용약관"
+        android:textSize="20sp"
+        android:gravity="center"
+        android:layout_below="@id/first"
+        />
+    <TextView
+        android:id="@+id/third"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:text="Q / A"
+        android:textSize="20sp"
+        android:gravity="center"
+        android:layout_below="@id/second"
+        />
+    <TextView
+        android:id="@+id/four"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:text="기 타"
+        android:textSize="20sp"
+        android:gravity="center"
+        android:layout_below="@id/third"
+        />
+    <TextView
+        android:id="@+id/five"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:text="고객센터 / 도움말"
+        android:textSize="20sp"
+        android:gravity="center"
+        android:layout_below="@id/four"
+        />
+
+
 
 
 
