--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,24 +5,27 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="50dp">
+    android:background="@drawable/background"
+    
+    >
 
 
     <ImageView
-        android:layout_width="220dp"
-        android:layout_height="220dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:src="@drawable/logo" />
+        android:layout_marginTop="100dp"
+        android:src="@drawable/logo2" />
 
 
     <Button
         android:id="@+id/btnKakao"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:background="#ffcc00"
         android:text="카카오톡으로 시작하기"
-        android:layout_marginTop="70dp"/>
+        android:layout_marginTop="100dp"/>
 
 
 </LinearLayout>
