--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/background"
     android:keepScreenOn="true">
 
     <TextView
@@ -54,10 +55,18 @@
 
         <Button
             android:id="@+id/imageAdd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="30dp"
             android:layout_centerHorizontal="true"
-            android:text="사진 설정" />
+            android:shadowColor="#000000"
+            android:shadowDx="0"
+            android:text="사진 추가"
+            android:shadowDy="0"
+            android:shadowRadius="5"
+            android:textColor="#000000"
+            android:background="@drawable/buttonshape"
+
+            />
 
     </RelativeLayout>
     <LinearLayout
@@ -171,6 +180,7 @@
             android:layout_margin="10dp"
             android:layout_weight="3"
             android:textAlignment="center" />
+
         <Spinner
             android:id="@+id/from_sub2"
             android:layout_width="wrap_content"
