--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -37,26 +37,13 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/left_image"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_margin="5dp"
-                    app:srcCompat="@android:color/darker_gray"/>
-
-                <ImageView
                     android:id="@+id/center_image"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
                     android:layout_margin="20dp"
+                    android:scaleType="fitXY"
                     app:srcCompat="@android:color/darker_gray"/>
 
-
-                <ImageView
-                    android:id="@+id/right_image"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_margin="5dp"
-                    app:srcCompat="@android:color/darker_gray"/>
             </LinearLayout>
 
             <RelativeLayout
