--- a/app/src/main/res/layout/network_progress_dialog.xml
+++ b/app/src/main/res/layout/network_progress_dialog.xml
@@ -3,8 +3,7 @@
               android:orientation="vertical"
               android:gravity="center"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@drawable/background">
+              android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
