네이버 로그인 API 연동 및 마이페이지 기능 개발~ing

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,15 +17,21 @@
         android:layout_marginTop="100dp"
         android:src="@drawable/logo2" />
 
+    <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
+        android:id="@+id/buttonOAuthLoginImg"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginTop="80dp"
+        />
 
     <Button
         android:id="@+id/btnKakao"
-        android:layout_width="300dp"
+        android:layout_width="235dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="#ffcc00"
         android:text="카카오톡으로 시작하기"
-        android:layout_marginTop="100dp"/>
+        android:layout_marginTop="10dp"/>
 
 
 </LinearLayout>
