--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -91,27 +91,29 @@
         android:layout_marginRight="20dp"
         android:layout_marginBottom="30dp"
         android:visibility="invisible"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:src="@drawable/SignAlarm" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="20dp"
         android:layout_marginBottom="30dp"
-        android:visibility="invisible"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:layout_marginRight="20dp"
+        android:src="@drawable/FloatingMessage"
+        android:visibility="invisible" />
 
         android:src="@android:drawable/ic_dialog_email" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="20dp"
         android:layout_marginBottom="30dp"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:layout_marginRight="20dp"
+        android:src="@drawable/FloatingBtnMain"
+        app:backgroundTint="@android:color/transparent" />
 
 
 
