--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,6 +32,12 @@
         android:background="#ffcc00"
         android:text="카카오톡으로 시작하기"
         android:layout_marginTop="10dp"/>
+    <Button
+        android:id="@+id/test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test"
+        />
 
 
 </LinearLayout>
