--- a/app/src/main/res/layout/mypage.xml
+++ b/app/src/main/res/layout/mypage.xml
@@ -3,18 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/background"
-    >
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/first_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
-        android:gravity="center"
-        >
+        android:layout_marginTop="30dp"
+        android:gravity="center">
 
 
         <ImageView
@@ -22,51 +20,38 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/first_layout"
-            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
             app:srcCompat="@android:color/darker_gray" />
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/img_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/first_layout"
-        android:gravity="center"
-        android:text="프로필 사진 바꾸기"
-        android:textSize="15sp"
-        android:textColor="@android:color/holo_blue_light"
-        />
 
     <LinearLayout
         android:id="@+id/second_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/img_text"
-        android:layout_marginTop="50dp"
-        >
+        android:layout_below="@id/first_layout"
+        android:layout_centerHorizontal="false"
+        android:layout_centerInParent="false"
+        android:orientation="horizontal"
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:gravity="left"
-            android:textSize="20sp"
-            android:text=" 이름  :  "
-            android:textColor="@android:color/background_dark"
-            />
+        >
 
         <TextView
             android:id="@+id/profile_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="20sp"
-            android:text="아직못넣음"
+            android:text="홍길동"
+            android:textColor="@android:color/background_dark"
+            android:textSize="18sp" />
 
-            />
+        <TextView
+            android:id="@+id/profile_age"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="(24)"
+            android:textColor="@android:color/background_dark"
+            android:textSize="18sp" />
 
     </LinearLayout>
 
@@ -75,18 +60,46 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/second_layout"
-        android:layout_marginTop="35dp"
-        >
+        android:layout_marginTop="30dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:gravity="left"
+            android:text=" 성   별  :  "
             android:textSize="20sp"
+            android:textColor="@android:color/background_dark"/>
+        <android.support.v7.widget.AppCompatRadioButton
+            android:id="@+id/man"
+            android:text="남자"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+        <android.support.v7.widget.AppCompatRadioButton
+            android:id="@+id/woman"
+            android:paddingLeft="10dp"
+            android:text="여자"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/four_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/third_layout"
+        android:layout_marginTop="35dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:gravity="left"
             android:text="거주지역  : "
             android:textColor="@android:color/background_dark"
-            />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/profile_area"
@@ -94,23 +107,22 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:gravity="center"
-            android:textSize="20sp"
             android:text="청주시 서원구 분평동"
             android:textColor="@android:color/background_dark"
-            />
+            android:textSize="20sp" />
 
     </LinearLayout>
+
     <TextView
         android:id="@+id/hobbytext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="취미선택"
-        android:textSize="20sp"
-        android:layout_below="@id/third_layout"
-        android:layout_marginTop="35dp"
+        android:layout_below="@id/four_layout"
         android:layout_marginLeft="15dp"
+        android:layout_marginTop="35dp"
+        android:text="취미선택"
         android:textColor="@android:color/background_dark"
-        />
+        android:textSize="20sp" />
 
     <LinearLayout
         android:id="@+id/hobby1_layout"
@@ -206,8 +218,6 @@
             android:textAlignment="center" />
 
     </LinearLayout>
-
-
 
 
 </RelativeLayout>
