--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -56,15 +56,15 @@
                     android:id="@+id/imageAdd"
                     android:layout_width="80dp"
                     android:layout_height="30dp"
+                    android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
+                    android:background="@drawable/buttonshape"
                     android:shadowColor="#000000"
                     android:shadowDx="0"
-                    android:text="사진 추가"
                     android:shadowDy="0"
                     android:shadowRadius="5"
-                    android:textColor="#000000"
-                    android:background="@drawable/buttonshape"
-                    />
+                    android:text="사진 추가"
+                    android:textColor="#000000" />
 
             </RelativeLayout>
 
