--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -92,6 +92,7 @@
                     android:gravity="center"
                     android:hint="입 력"
                     android:inputType="textPersonName"
+                    android:imeOptions="actionDone"
                     android:textColorLink="@android:color/darker_gray"/>
 
                 <Button
@@ -170,6 +171,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:hint="거주지역은 동까지 입력하시오."
+                    android:imeOptions="actionDone"
                     />
 
             </LinearLayout>
