--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -6,6 +6,8 @@
                 android:layout_height="match_parent"
                 android:keepScreenOn="true"
                 android:background="@drawable/background"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:orientation="vertical">
 
     <ScrollView
