--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -11,8 +11,7 @@
         android:id="@+id/infoPic"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_gravity="center"
-        app:srcCompat="@drawable/picture" />
+        android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/infoName"
